Further document code, fix overflow issues

--- a/html/sidebar.css
+++ b/html/sidebar.css
@@ -1,4 +1,3 @@
-/* ################ SIDEBAR ################ */
 #sidebar-card {
   /* To align contents vertically */
   display: flex;
@@ -19,13 +18,13 @@
   background-color: rgb(191, 191, 191);
 }
 
-/* //////////// SIDEBAR SELECT //////////// */
-/* CSS applying to a list of choices in the
-sidebar, containing a title (header) with plus
-button to add elements, and a list of selectable
-content. */
+/* ################## SIDEBAR CHOICE ################## */
+/* CSS applying to a list of choices in the sidebar,
+containing a title (header) with plus button to add
+elements, and a list of selectable content. */
 
-.sb-select-header {
+/* ========== HEADER ========== */
+.sb-choice-header {
   /* Horizontal align header elements */
   display: flex;
   flex-direction: row;
@@ -37,13 +36,13 @@ content. */
   overflow: hidden;
 }
 
-.sb-select-header-ico {
+.sb-choice-header-ico {
   height: auto;
   width: 2.2rem;
 }
 
-.sb-select-header-txt {
-  /* Push "+" to right */
+.sb-choice-header-name {
+  /* Push the "+" to the right */
   width: 100%;
   display: flex;
   align-items: center;
@@ -53,29 +52,33 @@ content. */
   font-size: x-large;
 }
 
-.sb-select-header-plus {
+.sb-choice-header-plus {
+  padding: 0.1rem; /* Make hitbox bigger */
   border-radius: 50%;
   height: 50%;
   display: none;
 }
 
-.sb-select-header:hover .sb-select-header-plus {
-  /* Having trouble animating this + like those in categories' headers :( */
+.sb-choice-header:hover .sb-choice-header-plus {
+  /* Only show the + when hovering over the header.
+  Having trouble animating this + like those in
+  categories' headers :( */
   display: block;
-  fill: black;
 }
 
-/* ++ List ++ */
-.sb-list {
+/* ========== LIST ========== */
+.sb-choice-list {
   display: flex;
   flex-direction: column;
-  max-height: 15rem;
+  /* Display max 5 courses
+  5 x ( 2x0.5padding + 1.5largetxt ) = 12.5 */
+  max-height: 12.5rem;
 
-  /* Relating to overflow */
+  /* Make list scrollable */
   overflow: auto;
 }
 
-.sb-list-element {
+.sb-choice-list-element {
   padding: 0.5rem;
   padding-left: 1rem;
   font-size: large;
@@ -83,7 +86,7 @@ content. */
   text-align: left;
 }
 
-/* //////////// SIDEBAR GPA //////////// */
+/* ################## SIDEBAR GPA ################## */
 #gpa-container {
   display: flex;
   justify-content: center;
@@ -92,7 +95,7 @@ content. */
   flex-direction: row;
 }
 
-/* //////////// SIDEBAR PROFILE //////////// */
+/* ################## SIDEBAR PROFILE ################## */
 #user-container {
   display: flex;
   padding: 0.5rem;
@@ -119,7 +122,7 @@ content. */
   border-radius: 100%;
 }
 
-/* //////////// SIDEBAR LOGOUT & PRIVACY //////////// */
+/* ################## SIDEBAR LOGOUT & PRIVACY ################## */
 .sb-item {
   display: flex;
   flex-direction: row;
@@ -127,6 +130,7 @@ content. */
   height: 2rem;
 }
 
+/* Each sb-item flexbox contains one img and one div */
 .sb-item>div {
   display: flex;
   align-items: center;
